fix imprint incl. linking

--- a/src/imprint.html
+++ b/src/imprint.html
@@ -20,9 +20,9 @@
       </h1>
 
       <div class="space-y-6 text-center sm:text-left">
-        <p className="text-xl font-semibold">Angaben gemäß § 5 TMG</p>
-        <p className="text-gray-700">
-          Coin & Mirror UG (in Gründung)
+        <p class="text-xl font-semibold">Angaben gemäß § 5 TMG</p>
+        <p class="text-gray-700">
+          Coin & Mirror UG (haftungsbeschränkt, i.G.)
           <br />
           z.H. Veit Spiegelberg
           <br />
@@ -30,11 +30,11 @@
           <br />
           12157 Berlin
           <br />
-          <i className="italic">No packages - delivery will denied!</i>
+          <i class="italic">No packages - delivery will denied!</i>
         </p>
 
-        <h3 className="text-xl font-semibold">Contact</h3>
-        <p className="text-gray-700">
+        <h3 class="text-xl font-semibold">Contact</h3>
+        <p class="text-gray-700">
           Telefon: [+49] 711-35884333
           <br />
           E-Mail: hi@coin-mirror.org
@@ -45,8 +45,8 @@
 
   <footer class="p-4 mt-8">
     <div class="container mx-auto text-center text-xs text-zinc-500">
-      Made with ❤️ by Coin & Mirror UG © 2024. All rights reserved. |
-      <a href="/imprint/index.html" class="underline">
+      Made with ❤️ by Coin & Mirror UG (haftungsbeschränkt, i.G.) © 2024. All rights reserved. |
+      <a href="/imprint.html" class="underline">
         Imprint
       </a>
     </div>
