--- a/src/index.html
+++ b/src/index.html
@@ -65,8 +65,8 @@
 
   <footer class="p-4 mt-8">
     <div class="container mx-auto text-center text-xs text-zinc-500">
-      Made with ❤️ by Coin & Mirror UG © 2024. All rights reserved. |
-      <a href="/imprint/index.html" class="underline">
+      Made with ❤️ by Coin & Mirror UG (haftungsbeschränkt, i.G.) © 2024. All rights reserved. |
+      <a href="/imprint.html" class="underline">
         Imprint
       </a>
     </div>
