fix linking on pages

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
 <body class="min-h-screen bg-[#d6d5cd]">
   <main class="py-24 px-4">
     <div class="max-w-3xl w-full mx-auto">
-      <div class="flex justify-center mb-12">
+      <a href="/" class="flex justify-center mb-12">
         <img src="/logo.png" alt="Coin & Mirror Logo" class="h-32 w-32 sm:h-48 sm:w-48 object-center object-contain" />
-      </div>
+      </a>
 
       <h1 class="text-3xl sm:text-4xl font-light text-gray-900 text-center mb-10">
         Building Tomorrow's Travel Technology
